frostwire (5.3.3) stable; urgency=high
  * Updated TPB search to support magnet link search results.
  * Added UT_METADATA extension to Vuze Core for improved magnet link support.
  * Upgraded Lucene library to v3.5.0.
  * Upgraded H2 to v1.3.164.

 -- FrostWire Team <contact@frostwire.com>  Thu, 08 Mar 2012 16:07:46 -0500

frostwire (5.3.2) stable; urgency=high
  * Reverted H2 library to v1.3.160

 -- FrostWire Team <contact@frostwire.com>  Sun, 12 Feb 2012 09:09:46 -0500

frostwire (5.3.1) stable; urgency=high
  * Updated default album cover image with an anti-aliased frostwire sphere.
  * Fixes bug where clicking on the current song would switch to the library
    but the button on the top would not be selected.
  * Adds missing icon for "copy magnet" on Send file dialog.
  * Library explorer and Playlist explorer are now divided by a split pane
    for a better experience.
  * Hides hints popup when search is triggered with a mouse click.
  * Updated search icon (magnifier).
  * Fonts are reset when the setup wizard is shown so the wizard can work
    properly.
  * New View > Reset Font Sizes action.
  * The first time the Library button is used "Finished Downloads" is
    preselected to give the user a clue of what can be done.
  * When a new playlist is created, a graphic is shown to hint the user
    about dragging audio files there.
  * Updated H2 library to v1.3.164

 -- FrostWire Team <contact@frostwire.com>  Sat, 11 Feb 2012 18:22:15 -0500

frostwire (5.3.0) stable; urgency=high
  * Search form looks similar to FrostWire 4 but now allows user to search
    for more than one file type at once.
  * Improvements in search algorithm.
  * Send file/folder feature more effective between just 2 peers.
  * Simplification of search form interface, looks similar to FrostWire 4
  * Phone & Tablets tab is gone, integration with Android devices is now
    part of the Library under a "Devices" tree item.